# rkyv_impl

./: Cargo.toml  README.md
src/: lib.rs
test_files/: 01-parse.rs  02-call-simple-methods.rs  03-generic-self-type.rs  04-unexpected-input.rs  04-unexpected-input.stderr  05-impl-trait.rs  06-parse-external-path.rs  07-unsupported-self-type.stderr  08-nonarchive-generic.rs  09-method-bounds.rs  10-transform-multiple-params.rs  11-preserve-other-attributes.rs  12-transform-associated-type.rs  unexpected-input.stderr  unsupported-self-type.rs  unsupported-self-type.stderr
tests/: all.rs  associated_type.rs  compile_errors.rs  external_path_to_self.rs  impl_trait.rs  method_bounds.rs  nonarchive_generic.rs  preserve_other_attributes.rs  simple.rs  transform_multiple_params.rs
