[package]
name = "rkyv_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }

[dev-dependencies]
rkyv = "0.7"
trybuild = { version = "1", features = ["diff"] }
