[package]
name = "rkyv_impl"
version = "0.1.0"
authors = ["Duncan Fairbanks <duncanfairbanks6@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Macro for `rkyv` users to implement methods on `Foo` and `ArchivedFoo` in a single `impl` block."
homepage = "https://github.com/bonsairobo/rkyv_impl"
repository = "https://github.com/bonsairobo/rkyv_impl"
readme = "README.md"
categories = ["encoding"]
keywords = ["macro", "rkyv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full", "visit-mut"] }

[dev-dependencies]
rkyv = "0.7"
trybuild = { version = "1", features = ["diff"] }
